@@ -3,10 +3,10 @@
 	package="dk.andsen.asqlitemanager"
 	android:installLocation="auto"
 	android:versionCode="1"
-	android:versionName="1.1">
+	android:versionName="1.2β">
 	<application android:icon="@drawable/sqlite_icon"
       android:label="@string/app_name"
-      android:debuggable="false">
+      android:debuggable="true">
 		<activity android:name=".aSQLiteManager" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
